<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.sxcalc.WelcomeFragment"
        android:label="@string/welcome_title"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_questionFragment"
            app:destination="@id/questionFragment" />
    </fragment>
    <fragment
        android:id="@+id/questionFragment"
        android:name="com.example.sxcalc.QuestionFragment"
        android:label="@string/question_title"
        tools:layout="@layout/fragment_question" >
        <action
            android:id="@+id/action_questionFragment_to_delFragment"
            app:destination="@id/delFragment" />
        <action
            android:id="@+id/action_questionFragment_to_winFragment"
            app:destination="@id/winFragment" />
    </fragment>
    <fragment
        android:id="@+id/delFragment"
        android:name="com.example.sxcalc.DelFragment"
        android:label="@string/lose_title"
        tools:layout="@layout/fragment_del" >
        <action
            android:id="@+id/action_delFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/winFragment"
        android:name="com.example.sxcalc.WinFragment"
        android:label="@string/win_title"
        tools:layout="@layout/fragment_win" >
        <action
            android:id="@+id/action_winFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
</navigation>